Updates installer to use jython.exe, runs ensurepip if selected
The installer on Windows no longer assumes jython.bat, but instead
uses the jyhon.exe native launcher replacement.

Now runs jython -m ensurepip if selected. Running ensurepip is now part
of the standard installation as well.

Fixes http://bugs.jython.org/issue2297